--- a/app/src/main/res/layout/activity_main_e2.xml
+++ b/app/src/main/res/layout/activity_main_e2.xml
@@ -228,48 +228,28 @@
 
             <CheckBox
                 android:id="@+id/cb_qE9_option_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_M"
-                android:paddingLeft="@dimen/padding_L"
-                android:text="@string/ansE9_1"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuizCheckBoxStyle"
+                android:text="@string/ansE9_1" />
 
             <CheckBox
                 android:id="@+id/cb_qE9_option_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_M"
-                android:paddingLeft="@dimen/padding_L"
-                android:text="@string/ansE9_2"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuizCheckBoxStyle"
+                android:text="@string/ansE9_2" />
 
             <CheckBox
                 android:id="@+id/cb_qE9_option_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_M"
-                android:paddingLeft="@dimen/padding_L"
-                android:text="@string/ansE9_3"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuizCheckBoxStyle"
+                android:text="@string/ansE9_3" />
 
             <CheckBox
                 android:id="@+id/cb_qE9_option_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_M"
-                android:paddingLeft="@dimen/padding_L"
-                android:text="@string/ansE9_4"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuizCheckBoxStyle"
+                android:text="@string/ansE9_4" />
 
             <CheckBox
                 android:id="@+id/cb_qE9_option_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_M"
-                android:paddingLeft="@dimen/padding_L"
-                android:text="@string/ansE9_5"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuizCheckBoxStyle"
+                android:text="@string/ansE9_5" />
         </LinearLayout>
 
         <LinearLayout
