all question text updated to use style

--- a/app/src/main/res/layout/activity_main_e1.xml
+++ b/app/src/main/res/layout/activity_main_e1.xml
@@ -47,14 +47,8 @@
                 android:text="@string/question_1" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_E1"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionTextViewStyle"
+                android:text="@string/question_E1" />
 
             <RadioGroup
                 android:id="@+id/rg_question_E1"
@@ -112,14 +106,8 @@
                 android:text="@string/question_2" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_E2"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionTextViewStyle"
+                android:text="@string/question_E2" />
 
             <EditText
                 android:id="@+id/et_question_E2"
@@ -150,14 +138,8 @@
                 android:text="@string/question_3" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_E3"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionTextViewStyle"
+                android:text="@string/question_E3" />
 
             <RadioGroup
                 android:id="@+id/rg_question_E3"
@@ -209,14 +191,8 @@
                 android:text="@string/question_4" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_E4"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionTextViewStyle"
+                android:text="@string/question_E4" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -265,14 +241,8 @@
                 android:text="@string/question_5" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/question_E5"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionTextViewStyle"
+                android:text="@string/question_E5" />
 
             <RadioGroup
                 android:id="@+id/rg_question_E5"
