all question text updated to use style - last question which was missed (H1)

--- a/app/src/main/res/layout/activity_main_h1.xml
+++ b/app/src/main/res/layout/activity_main_h1.xml
@@ -45,14 +45,8 @@
                 android:text="@string/question_1" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_S"
-                android:layout_marginTop="@dimen/margin_S"
-                android:text="@string/select_all_true_statements"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_M" />
+                style="@style/QuestionTextViewStyle"
+                android:text="@string/select_all_true_statements" />
 
             <TextView
                 android:layout_width="wrap_content"
